--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -3,6 +3,11 @@
  * Styles used by the Upgrade Status module.
  */
 
+/* @todo avoid ID selector */
+#queueprogress {
+  margin: 0 1em 3em 1em;
+}
+
 .upgrade-status-summary > summary {
   background-color: #f5f5f2;
   margin: 0 0 1em 0;
