Fix error counting and line up tables in custom and contrib for visual clarity and harmony

--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -23,6 +23,9 @@
 .upgrade-status-summary table {
   margin-top: 1.2em;
 }
+.upgrade-status-summary thead th {
+  width: 33%;
+}
 .upgrade-status-summary tr > td:first-child {
   font-weight: bold;
   padding-left: 35px; /* LTR */
