Improve progress bar handling. Display message by default and fork progress JS code to allow for passing in additional JSON data to response handler.

--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -3,8 +3,7 @@
  * Styles used by the Upgrade Status module.
  */
 
-/* @todo avoid ID selector */
-#queueprogress {
+.drupal-upgrade-status-form .progress {
   margin: 0 1em 3em 1em;
 }
 
