Fix the progress “reflash” where progress would not stop at 100% but one step later. Fix operations buttons while results are being loaded. Now they open dialogs. Also display last run time finally.

--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -3,8 +3,19 @@
  * Styles used by the Upgrade Status module.
  */
 
+.drupal-upgrade-status-form .report-date {
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+.drupal-upgrade-status-form .button {
+  margin-left: 0;
+}
+[dir="rtl"] .drupal-upgrade-status-form .button {
+  margin-left: inherit;
+  margin-right: 0;
+}
 .drupal-upgrade-status-form .progress {
-  margin: 0 1em 3em 1em;
+  margin-bottom: 3em;
 }
 
 .upgrade-status-summary > summary {
