Fix todos about human readable names and versions, makes for more readable exports and error lists as well

--- a/templates/full-export.html.twig
+++ b/templates/full-export.html.twig
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Upgrade Status - Full report - {{ date }}</title>
+  <title>Full site upgrade status report - {{ date }}</title>
   <style>
     th, td {
       border-bottom: 1px solid #cdcdcd;
