--- a/templates/single-export.html.twig
+++ b/templates/single-export.html.twig
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Upgrade Status - Single report - {{ project.name }} - {{ date }}</title>
+  <title>{{ project.name }} upgrade status report - {{ date }}</title>
   <style>
     th, td {
       border-bottom: 1px solid #cdcdcd;
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<h1>Upgrade status report for {{ project.name }} project - {{ date }}</h1>
+<h1>{{ project.name }} upgrade status report - {{ date }}</h1>
 {{ project.data }}
 </body>
 </html>
