Further improve export. Fix operations replacement for custom projects.

--- a/templates/single-export.html.twig
+++ b/templates/single-export.html.twig
@@ -9,6 +9,9 @@
       border-bottom: 1px solid #cdcdcd;
       width: 47%;
     }
+    table {
+      width: 100%;
+    }
     th:nth-child(2), td:nth-child(2) {
       width: 6%;
     }
