--- a/templates/full-export.html.twig
+++ b/templates/full-export.html.twig
@@ -8,6 +8,9 @@
     body {
       font-family: Helvetia, Arial, sans-serif;
     }
+    table {
+      width: 100%;
+    }
     th, td {
       border-bottom: 1px solid #cdcdcd;
       width: 47%;
