--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -14,9 +14,6 @@
   margin-left: inherit;
   margin-right: 0;
 }
-.drupal-upgrade-status-form .progress {
-  margin-bottom: 3em;
-}
 
 .upgrade-status-summary > summary {
   background-color: #f5f5f2;
@@ -33,20 +30,25 @@
 .upgrade-status-summary table {
   margin-top: 1.2em;
 }
-.upgrade-status-summary thead th {
-  width: 25%;
+.upgrade-status-summary th.project-label {
+  width: 60%;
 }
-.upgrade-status-summary-custom thead th:nth-child(2) {
-  width: 50%;
+.upgrade-status-summary th.update-info {
+  width: 20%;
 }
-.upgrade-status-summary tr > td:first-child {
-  font-weight: bold;
+.upgrade-status-summary th.status-info {
+  width: 20%;
+}
+.upgrade-status-summary-custom th.project-label {
+  width: 80%;
+}
+.upgrade-status-summary tr > td.status-info {
   padding-left: 35px; /* LTR */
   background-repeat: no-repeat;
   background-position-x: 10px; /* LTR */
   background-position-y: center;
 }
-[dir="rtl"] .upgrade-status-summary tr > td:first-child {
+[dir="rtl"] .upgrade-status-summary tr > td.status-info {
   padding-left: 0;
   padding-right: 35px; /* LTR */
   /* @todo x background position for RTL */
@@ -56,14 +58,17 @@
 .upgrade-status-summary tr.known-errors {
   background-color: #fcf4f2;
 }
-.upgrade-status-summary tr.known-errors > td:first-child {
+.upgrade-status-summary tr.known-errors > td.status-info {
   background-image: url(/core/misc/icons/e32700/error.svg);
 }
 .upgrade-status-summary tr.no-known-error {
   background-color: #f3faef;
 }
-.upgrade-status-summary tr.no-known-error > td:first-child {
+.upgrade-status-summary tr.no-known-error > td.status-info {
   background-image: url(/core/misc/icons/73b355/check.svg);
+}
+.upgrade-status-summary tr.not-scanned > td.status-info {
+  background-image: url(/core/misc/icons/000000/questionmark-disc.svg);
 }
 
 .error-description {
