--- a/templates/single-export.html.twig
+++ b/templates/single-export.html.twig
@@ -33,7 +33,7 @@
 
 <body>
 <h1>{{ project.name }} upgrade status report - {{ date }}</h1>
-{{ project.description }}
+{{ project.summary }}
 {{ project.data }}
 </body>
 </html>
