Make selected multiexport work. Unify export solutions, so single export uses the same. Get rid of duplicate templates and superfluous export controller. Add tests for selected multiexport and refine single export test.

--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -61,6 +61,6 @@
   background-image: url(/core/misc/icons/000000/questionmark-disc.svg);
 }
 
-.error-description {
+.list-description {
   margin-bottom: 1em;
 }
