Issue #3053948: Guide users on how to best engage with a contrib project maintainer

--- a/templates/upgrade-status-html-export.html.twig
+++ b/templates/upgrade-status-html-export.html.twig
@@ -40,6 +40,7 @@
     <h3>{{ project.name }}</h3>
     {{ project.date }}
     {{ project.summary }}
+    {{ project.plans }}
     {{ project.data }}
   {% endfor %}
 {% endif %}
@@ -50,6 +51,7 @@
     <h3>{{ project.name }}</h3>
     {{ project.date }}
     {{ project.summary }}
+    {{ project.plans }}
     {{ project.data }}
   {% endfor %}
 {% endif %}
