--- a/templates/upgrade-status-summary-counter.html.twig
+++ b/templates/upgrade-status-summary-counter.html.twig
@@ -3,9 +3,9 @@
   {% for item in summary %}
     <div class="upgrade-status-counters__item">
       <div class="upgrade-status-counter">
-        <div class="upgrade-status-counter__status-icon upgrade-status-counter__status-icon--{{ item.type|clean_class }}"></div>
+        <div class="upgrade-status-counter__status-icon upgrade-status-counter__status-icon--{{ item.class }}"></div>
         <div class="upgrade-status-counter__status-title">
-          <span class="upgrade-status-counter__title-count">{{ item.count }} {{ item.type|t }}</span>
+          <span class="upgrade-status-counter__title-count">{{ item.type }}</span>
           <span class="upgrade-status-counter__details">{{ item.message }}</span>
         </div>
       </div>
