Issue #3130646 by Gábor Hojtsy, DamienMcKenna, eojthebrave: Support limited checking of disabled projects

--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -17,6 +17,10 @@
   border-bottom: 1px solid #ccc;
 }
 
+.upgrade-status-summary table+h3 {
+  margin-top: 2em;
+}
+
 .upgrade-status-summary table {
   margin-top: 1.2em;
 }
