--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -11,21 +11,30 @@
   margin-right: 0;
 }
 
+.upgrade-status-overview {
+  border: 1px solid #ccc;
+}
 .upgrade-status-overview tr:hover {
   color: inherit;
   background-color: inherit;
 }
+.upgrade-status-overview td a:hover {
+  color: inherit;
+}
 .upgrade-status-overview th {
   background-color: #f5f5f2;
-  border-bottom: 1px solid #ccc;
+  border: 1px solid #ccc;
   width: 33%;
 }
 .upgrade-status-overview td {
   vertical-align: top;
+  border: 1px solid #ccc;
 }
 .upgrade-status-overview td .item-list ul li {
-  list-style-type: none;
-  margin-left: 0;
+  list-style-type: square;
+}
+.upgrade-status-overview td:nth-child(3) .item-list ul li {
+  margin-right: 6em;
 }
 
 .upgrade-status-summary > summary,
@@ -82,7 +91,9 @@
 .upgrade-status-error-list tr.known-errors,
 .upgrade-status-next-step-rector tr,
 .upgrade-status-next-step-manual tr,
-.upgrade-status-summary-environment tr.known-error {
+.upgrade-status-summary-environment tr.known-error,
+.upgrade-status-summary-label-rector,
+.upgrade-status-summary-label-manual {
   background-color: #fcf4f2;
   color: #a51b00;
 }
@@ -95,7 +106,9 @@
 .upgrade-status-error-list tr.known-warnings,
 .upgrade-status-next-step-update tr,
 .upgrade-status-next-step-remove tr,
-.upgrade-status-summary-environment tr.known-warning {
+.upgrade-status-summary-environment tr.known-warning,
+.upgrade-status-summary-label-update,
+.upgrade-status-summary-label-remove {
   background-color: #fdf8ed;
   color: #734c00;
 }
@@ -113,7 +126,8 @@
 
 .upgrade-status-error-list tr.no-known-error,
 .upgrade-status-next-step-relax tr,
-.upgrade-status-summary-environment tr.no-known-error {
+.upgrade-status-summary-environment tr.no-known-error,
+.upgrade-status-summary-label-relax {
   background-color: #f3faef;
   color: #325e1c;
 }
@@ -125,7 +139,8 @@
 }
 
 .upgrade-status-error-list tr.rector-covered,
-.upgrade-status-next-step-collaborate tr {
+.upgrade-status-next-step-collaborate tr,
+.upgrade-status-summary-label-collaborate {
   background-color: #f0f8ff;
   color: #000;
 }
@@ -145,25 +160,30 @@
 .upgrade-status-summary-label {
   padding: 3px 5px;
   border-radius: 3px;
-  white-space: nowrap;
 }
-.upgrade-status-summary-label-relax {
-  background-color: #f3faef;
-  color: #325e1c;
+
+.upgrade-status-result-circle {
+  display: block;
+  margin: 0 0 1em 1em;
+  height: 5em;
+  float: right;
 }
-.upgrade-status-summary-label-update,
-.upgrade-status-summary-label-remove {
-  background-color: #fdf8ed;
-  color: #734c00;
+.upgrade-status-result-circle .circle-bg {
+  fill: none;
+  stroke: #f5f5f2;
+  stroke-width: 3.8;
 }
-.upgrade-status-summary-label-rector,
-.upgrade-status-summary-label-manual {
-  background-color: #fcf4f2;
-  color: #a51b00;
+.upgrade-status-result-circle .circle {
+  fill: none;
+  stroke-width: 2.8;
+  stroke-linecap: round;
+  animation: progress 1s ease-out forwards;
+  stroke: #325e1c;
 }
-.upgrade-status-summary-label-collaborate {
-  background-color: #f0f8ff;
-  color: #000;
+.upgrade-status-result-circle .percentage {
+  font-size: 0.5em;
+  text-anchor: middle;
+  font-weight: bold;
 }
 
 .upgrade-status-ok-label,
