Issue #3168912 by Gábor Hojtsy, Kristen Pol: Drupal.org issue link replaced with Drupal 9 plan on scan, otherwise not pulled

--- a/css/upgrade_status.admin.theme.css
+++ b/css/upgrade_status.admin.theme.css
@@ -62,7 +62,7 @@
 .upgrade-status-summary th.project-label {
   width: 20%;
 }
-.upgrade-status-summary th.issue-info {
+.upgrade-status-summary th.plan-info {
   width: 24%;
 }
 
